Fix panel border being hidden by subsequent element

--- a/src/bp-core/admin/css/admin.css
+++ b/src/bp-core/admin/css/admin.css
@@ -128,6 +128,7 @@
 
 .bpa-panel {
   padding: 20px 15px;
+  margin-bottom: 10px;
   background-color: #D84800;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.16), 0 5px 10px 0 rgba(0, 0, 0, 0.12); }
   .bpa-panel h1 {
