--- a/src/bp-core/admin/sass/layouts/_panel.scss
+++ b/src/bp-core/admin/sass/layouts/_panel.scss
@@ -1,5 +1,6 @@
 .bpa-panel {
 	padding: 20px $dashboard-margin;
+	margin-bottom: 10px;
 	background-color: $color-complementary;
 	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.16), 0 5px 10px 0 rgba( 0, 0, 0, 0.12);
 
